added car part detail view

--- a/car_parts/templates/car_parts/car_part_detail.html
+++ b/car_parts/templates/car_parts/car_part_detail.html
@@ -1,3 +1,9 @@
-{{carpart.part_name}} <br>
-{{carpart.brand}} <br>
-this is car part
+<h1>this is car part</h1>
+
+carpart name: {{carpart.part_name}} <br>
+model name: {{carpart.car_model_name}}<br>
+car brancname: {{carpart.brand}} <br>
+Category: {{carpart.category}}<br>
+description: {{carpart.description}}<br>
+is_new: {{carpart.is_new}}<br>
+seller username: {{carpart.seller.user.username}}<br>
